#924: Definir dies laborables nivell tipus expedient
Task-Url: https://github.com/GovernIB/helium/issues/issue/924

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -286,6 +286,7 @@ expedient.tipus.form.demana_titol=Demana títol
 expedient.tipus.form.amb_num=Amb número
 expedient.tipus.form.demana_num=Demana número
 expedient.tipus.form.expressio=Expressió per calcular el número
+expedient.tipus.form.die_no_labs=Dies no laborables
 expedient.tipus.form.seq_actual=Seqüència actual
 expedient.tipus.form.seq_reiniciar=Reiniciar seqüència anualment
 expedient.tipus.form.restringir_grup=Restringir accés segons el grups de l'usuari
@@ -295,6 +296,7 @@ expedient.tipus.form.sequencia=Seqüència
 expedient.tipus.form.seq_actuals=Seqüències actuals
 expedient.tipus.form.amb_retroaccio=Amb retroacció
 expedient.tipus.form.reindexacio_asincrona=Reindexació asíncrona
+expedient.tipus.form.exemple.dies_no_labs=Dies de la setmana que no es consideren laborables, separats per coma (5,6,7...)
 
 expedient.massiva.reassignacio=Reassignació massiva de tasques
 expedient.massiva.titol=Execució d'accions massives
