#925: Possibilitat d'agafar vàries tasques
Task-Url: https://github.com/GovernIB/helium/issues/issues/925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -56,7 +56,7 @@ expedient.llistat.columna.finalitzat=Finalitzat el
 expedient.llistat.columna.tipus=Tipus
 expedient.llistat.columna.estat=Estat
 expedient.llistat.accio.consultar=Gestionar
-expedient.llistat.accio.consultar.expedient=Consultar expedient
+expedient.llistat.accio.consultar.expedient=Gestionar expedient
 expedient.llistat.accio.aturar=Aturar
 expedient.llistat.accio.reprendre=Reprendre
 expedient.llistat.accio.anular=Anul·lar
@@ -348,6 +348,9 @@ tasca.llistat.confirmacio.cancelar=Estau segur que voleu cancel·lar aquesta tasc
 tasca.llistat.confirmacio.alliberar=Estau segur que voleu alliberar aquesta tasca?
 tasca.llistat.reassignacions.massiva=Reassignació massiva
 tasca.llistat.reassignacions.programacio=Programació
+tasca.llistat.agafar.seleccionats=Agafar seleccionades
+tasca.llistat.agafar.seleccionats.success=S''han agafat correctament {0} de les {1} tasques seleccionades
+tasca.llistat.agafar.seleccionats.error=No s''ha pogut agafar la tasca "{0}" de l''expedient "{1}"
 
 tasca.tramitacio.pipella.form=Dades
 tasca.tramitacio.pipella.document=Documents
