--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -88,6 +88,7 @@ expedient.document.titol=Títol
 expedient.document.arxiu=Arxiu
 expedient.document.data=Data
 expedient.document.modificar=Modificar document
+expedient.document.descarregar=Descarregar document
 expedient.document.adjunt=Document adjunt
 expedient.document.document=Document
 expedient.document.documents_proces=Documents del procés
@@ -138,12 +139,42 @@ expedient.termini.modificar.tipus=Tipus de modificació
 expedient.termini.data.inici=Data d'inici
 expedient.termini.data.fi=Data de fi
 
+expedient.notificacio=Notificació
+expedient.notificacio.expedient=Notificació de l'expedient
+expedient.notificacio.error=Error de la notificacio 
+expedient.notificacio.unitat_administrativa=Unitat Administrativa
+expedient.notificacio.organ_codi=Òrgan codi
+expedient.notificacio.oficina_codi=Oficina codi
+expedient.notificacio.avis_titol=Avís títol
+expedient.notificacio.avis_text=Avís text
+expedient.notificacio.avis_text_sms=Avís text SMS
+expedient.notificacio.ofici_titol=Ofici títol
+expedient.notificacio.ofici_text=Ofici text
 expedient.notificacio.notificacions=Notificacions
-expedient.notificacio.data=Data
+expedient.notificacio.data_enviament=Data enviament
+expedient.notificacio.data_recepcio=Data recepció
+expedient.notificacio.registre_num=Número registre
 expedient.notificacio.assumpte=Assumpte
 expedient.notificacio.estat=Estat
 expedient.notificacio.interessat=Interessat
 expedient.notificacio.document=Document
+expedient.notificacio.info=Informació notificació
+expedient.notificacio.descarregar.doc=Descarregar document
+expedient.notificacio.interessat.document_num=Número document
+expedient.notificacio.interessat.nom_llinatges=Nom i llinatges
+expedient.notificacio.interessat.email=Email
+expedient.notificacio.interessat.pais=País
+expedient.notificacio.interessat.provincia=Provincia
+expedient.notificacio.interessat.municipi=Municipi
+expedient.notificacio.document_annexos=Documents i annexos
+expedient.notificacio.dades_generals=Dades generals
+expedient.notificacio.estat.enviat=ENVIAT
+expedient.notificacio.estat.processat_ok=PROCESSAT
+expedient.notificacio.estat.processat_rebutjat=REBUTJAT
+expedient.notificacio.estat.processat_error=ERROR PROCESSANT
+expedient.notificacio.mostrar_error=Mostrar error
+expedient.notificacio.tornar_processar=Tornar a processar
+expedient.notificacio.reprocessada=S'ha tornat a demanar el justificant
 
 expedient.eines.confirm_aturar=Estau segur que voleu donar aquesta tasca per finalitzada?
 expedient.eines.confirm_aturar_tramitacio=Estau segur que voleu aturar la tramitació d'aquest expedient?
