--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -186,7 +186,7 @@ expedient.tasca.temps.execucio=Temps execució
 expedient.log.expedient.cap=Aquest expedient no conté cap log
 expedient.log.proces.cap=Aquest proces no conté cap log
 
-expedient.notificacio.expedient.cap=Aquest proces no conté cap notificació
+expedient.notificacio.expedient.cap=Aquest expedient no conté cap notificació
 
 expedient.tasca.columna.tasca=Tasca
 expedient.tasca.columna.tasca.activa=Tasca activa
