--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -130,6 +130,7 @@ expedient.info.pipella.accions=Accions
 expedient.info.pipella.dades=Dades
 expedient.info.pipella.documents=Documents
 expedient.info.pipella.terminis=Terminis
+expedient.info.pipella.notificacions=Notificacions
 expedient.info.pipella.registre=Registre
 expedient.info.pipella.cronograma=Cronograma
 expedient.info.confirm.dada.esborrar=Estau segur que voleu esborrar aquesta dada de l'expedient?
@@ -184,6 +185,8 @@ expedient.tasca.temps.execucio=Temps execució
 
 expedient.log.expedient.cap=Aquest expedient no conté cap log
 expedient.log.proces.cap=Aquest proces no conté cap log
+
+expedient.notificacio.expedient.cap=Aquest expedient no conté cap notificació
 
 expedient.tasca.columna.tasca=Tasca
 expedient.tasca.columna.tasca.activa=Tasca activa
