#931: Proves funcionas i correcció d'errors
Task-Url: https://github.com/GovernIB/helium/issues/issues/931

Correccions d'errors:
- Null pointer dades expedient quan no hi ha cap dada
- Falta la propietat app.notificacions.comprovar.estat
- Quan es prem sobre una línia del grid ordenable reordena tot i no
intercanviar posició
- Els valors de la enumeració del tipus d'expedient no es troben al grid
com en els altres llistats
- Opcions duplicades menú disseny que apuntaven a la nova i antiga
versió. Es deixen els enllaços cap a la nova versió i un enllaç a la
antiga
- Error carregant les variables de definicions de procés per consultes
- No es troben els documents de la definició de procés per a la
signatura
- No es copien les dades de la darrera versió de la definició de procés
cap a la nova quan es crea una nova versió d'un desplegament .par.
- El tooltip no desapareix
- Quan es desplega un PAR no es relaciona amb el tipus d'expedient
escollit
- Falta avisar en el disseny de la definició de procés si el tipus
d'expedient relacionat està configurat per utilitzar informació pròpia.
- Botó per esborrar valor de variable múltiple quan les dades ja han
estat validades

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -940,6 +940,8 @@ definicio.proces.pipelles.pipella.recursos=Recursos
 definicio.proces.pipelles.cap=No s'ha trobat cap definició de procés amb aquest codi
 definicio.proces.pipelles.confirmacio.esborrar=Estau segur que voleu esborrar aquesta versió de la definició de procés? Aquesta acció no es pot tornar enrera una vegada executada
 
+definicio.proces.ambInfoPropia.avis=Atenció! El tipus d''expedient està configurat per utilitzar la informació pròpia. Modifiqueu el tipus d''expedient i desmarqueu la opció \"{0}\" si voleu utilitzar aquestes dades en comptes de les del tipus d'expedient.
+
 
 definicio.proces.detall.camp.id=Id
 definicio.proces.detall.camp.codi=Codi
