#930: Distribució de camps formularis
Task-Url: https://github.com/GovernIB/helium/issues/issue/930

NOVA RELEASE: 3.2.1

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -780,7 +780,8 @@ expedient.tipus.integracio.forms.noaut=Si no necessita autenticació es pot deixa
 expedient.tipus.integracio.forms.controller.guardat=Els canvis s'han guardat correctament
 expedient.tipus.integracio.forms.validacio = Errors de validació
 
-expedient.tipus.integracio.tramits.activar=Activar
+expedient.tipus.integracio.tramits.activar=Activar tràmits
+expedient.tipus.integracio.tramits.notificacions.activar=Activar notificacions
 expedient.tipus.integracio.tramits.mapeig.variables=Mapeig de variables
 expedient.tipus.integracio.tramits.mapeig.documents=Mapeig de documents
 expedient.tipus.integracio.tramits.mapeig.adjunts=Mapeig de documents com adjunts
@@ -788,6 +789,17 @@ expedient.tipus.integracio.tramits.variables=Variables
 expedient.tipus.integracio.tramits.documents=Documents
 expedient.tipus.integracio.tramits.adjunts=Adunts
 expedient.tipus.integracio.tramits.tramitCodi=Identificador del tràmit
+
+expedient.tipus.integracio.notificacio.organCodi=Codi d'òrgan
+expedient.tipus.integracio.notificacio.oficinaCodi=Codi d'oficina
+expedient.tipus.integracio.notificacio.unitatAdministrativa=Unitat administrativa
+expedient.tipus.integracio.notificacio.codiProcediment=Codi de procediment
+expedient.tipus.integracio.notificacio.avisTitol=Títol d'avís
+expedient.tipus.integracio.notificacio.avisText=Text d'avís
+expedient.tipus.integracio.notificacio.avisSmsText=Text SMS d'avís
+expedient.tipus.integracio.notificacio.oficiTitol=Títol de l'ofici
+expedient.tipus.integracio.notificacio.oficiText=Text de l'ofici
+
 
 expedient.tipus.integracio.tramits.controller.guardat=Els canvis s'han guardat correctament
 expedient.tipus.integracio.tramits.validacio = Errors de validació
@@ -876,6 +888,8 @@ expedient.tipus.consulta.vars.llistat.columna.variable=Variable
 expedient.tipus.consulta.vars.llistat.columna.tipus=Tipus
 expedient.tipus.consulta.vars.llistat.columna.defincioProces=Definició de procés
 expedient.tipus.consulta.vars.llistat.columna.ordre=Ordre
+expedient.tipus.consulta.vars.llistat.columna.ampleCols=Col. Ample
+expedient.tipus.consulta.vars.llistat.columna.buitCols=Col. Buit
 expedient.tipus.consulta.vars.llistat.accio.afegir=Afegir
 expedient.tipus.consulta.vars.llistat.accio.esborrar=Esborrar
 expedient.tipus.consulta.vars.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest registre?
@@ -980,6 +994,8 @@ definicio.proces.tasca.variable.columna.readFrom=Read from
 definicio.proces.tasca.variable.columna.writeTo=Write to
 definicio.proces.tasca.variable.columna.required=Required
 definicio.proces.tasca.variable.columna.readOnly=Read only
+definicio.proces.tasca.variable.columna.ampleCols=Col. Ample
+definicio.proces.tasca.variable.columna.buitCols=Col. Buit
 
 definicio.proces.tasca.variable.columna.ordre=Ordre
 definicio.proces.tasca.variable.accio.afegir=Afegir
