#936: Temps excessiu processant documents firmats
Task-Url: https://github.com/GovernIB/helium/issues/issue/936

NOVA RELEASE: 3.1.77

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -392,6 +392,8 @@ expedient.nova.data.selecciona=Selecciona una opció
 expedient.nova.data.codi=Codi
 expedient.nova.data.valor=Valor
 
+expedient.nou.document.existent=Documents definits en el procés
+
 monitor.domini.titol=Monitor de consultes a domini
 monitor.domini.opcio.dominis.interns=Dominis interns
 monitor.domini.camp.entorn=Entorn
