--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -81,10 +81,12 @@ expedient.dada.ocults=Visualitzar camps ocults
 expedient.document.expedient.cap=Aquest expedient no conté cap document
 expedient.document.proces.cap=Aquest procés no conté cap document
 expedient.document.adjuntar=Adjuntar nou document
+expedient.document.afegir=Afegir nou document
 expedient.document.esborrar=Esborrar document
 expedient.document.esborrar.signatures=Document signat (clic per esborrar totes les signatures)
 expedient.document.modificar_adjunt=Modificar document adjunt
 expedient.document.titol=Títol
+expedient.document.adjuntar.document=Adjuntar nou document
 expedient.document.arxiu=Arxiu
 expedient.document.data=Data
 expedient.document.modificar=Modificar document
