--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -85,7 +85,7 @@ expedient.llistat.columna.finalitzat=Finalitzat el
 expedient.llistat.columna.tipus=Tipus
 expedient.llistat.columna.estat=Estat
 expedient.llistat.accio.consultar=Gestionar
-expedient.llistat.accio.consultar.expedient=Consultar expedient
+expedient.llistat.accio.consultar.expedient=Gestionar expedient
 expedient.llistat.accio.aturar=Aturar
 expedient.llistat.accio.reprendre=Reprendre
 expedient.llistat.accio.anular=Anul·lar
@@ -261,6 +261,7 @@ expedient.tipus.pipelles.pipella.estats=Estats
 expedient.tipus.pipelles.pipella.variables=Variables
 expedient.tipus.pipelles.pipella.definicions.proces=Definicions de procés
 expedient.tipus.pipelles.pipella.integracio.tramits=Integració amb tràmits
+expedient.tipus.pipelles.pipella.integracio.sistra=Integració amb SISTRA
 expedient.tipus.pipelles.pipella.integracio.forms=Integració amb forms
 expedient.tipus.pipelles.pipella.enumeracions=Enumeracions
 expedient.tipus.pipelles.pipella.documents=Documents
@@ -1139,6 +1140,9 @@ tasca.llistat.confirmacio.cancelar=Estau segur que voleu cancel·lar aquesta tasc
 tasca.llistat.confirmacio.alliberar=Estau segur que voleu alliberar aquesta tasca?
 tasca.llistat.reassignacions.massiva=Reassignació massiva
 tasca.llistat.reassignacions.programacio=Programació
+tasca.llistat.agafar.seleccionats=Agafar seleccionades
+tasca.llistat.agafar.seleccionats.success=S''han agafat correctament {0} de les {1} tasques seleccionades
+tasca.llistat.agafar.seleccionats.error=No s''ha pogut agafar la tasca "{0}" de l''expedient "{1}"
 
 tasca.tramitacio.pipella.form=Dades
 tasca.tramitacio.pipella.document=Documents
