#940: Importació fitxer amb dades dels estats
Task-Url: https://github.com/GovernIB/helium/issues/issues/940

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -769,8 +769,17 @@ expedient.tipus.estat.form.estat.nom=Nom
 expedient.tipus.estat.controller.creat=Estat creat correctament
 expedient.tipus.estat.controller.modificat=Estat modificat correctament
 expedient.tipus.estat.controller.eliminat=Estat esborrat correctament
-expedient.tipus.estat.controller.eliminat.no=No s'ha pogut esborrar l'estat
+expedient.tipus.estat.controller.eliminat.no=No s''ha pogut esborrar l''estat: {0}
 expedient.tipus.estat.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest estat?
+
+expedient.tipus.estat.importar.form.titol=Importar dades d'estats
+expedient.tipus.estat.importar.form.titol.modificar=Modificar estat
+expedient.tipus.estat.importar.form.estat.codi=Codi
+expedient.tipus.estat.importar.form.estat.nom=Nom
+expedient.tipus.estat.importar.controller.validacio.multipartFile.buit=L'arxiu a importar no pot estar buit
+expedient.tipus.estat.importar.controller.success=Importació finalitzada amb {0} insercions i {1} actualitzacions
+expedient.tipus.estat.importar.controller.error=Error durant la importació de dades: {0}
+expedient.tipus.estat.importar.controller.error.codi=No s''ha pogut importar l''estat "{0}". El codi no pot començar per majúscula i minúscula ni contenir espais o punts.
 
 expedient.tipus.integracio.forms.activar=Activar
 expedient.tipus.integracio.forms.url=Url del servei d'integració amb formularis externs
@@ -1219,7 +1228,7 @@ comu.estat.finalitzat=Finalitzat
 comu.filtre.filtrar=Filtrar
 comu.filtre.netejar=Netejar
 comu.filtre.exportar=Exportar
-comu.filtre.importar=Importar
+comu.importar=Importar
 comu.filtre.desplegar=Desplegar
 comu.boto.accions=Accions
 comu.boto.eines=Eines
@@ -1231,6 +1240,7 @@ comu.boto.crear=Crear
 comu.boto.modificar=Modificar
 comu.boto.esborrar=Esborrar
 comu.boto.tornar=Tornar
+comu.boto.importar.dades=Importar dades
 comu.tots=Tots
 comu.arxiu=Arxiu
 comu.processant=Processant
