#941: Correcció de literals en la importació de tipus d'expedient
Task-Url: https://github.com/GovernIB/helium/issues/issues/941

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -409,7 +409,7 @@ expedient.tipus.importar.form.opcions.sobreEscriure=Sobreescriure dades existent
 expedient.tipus.importar.form.camp.codi=Codi
 
 expedient.tipus.importar.form.error.arxiu.buit=No s'ha seleccionat cap arxiu o no conté cap informació
-expedient.tipus.importar.form.error.arxiu.erroni=El contingut de l'arxiu no es correspon amb una exportació de tipus d'expedient tal i com s'espera
+expedient.tipus.importar.form.error.arxiu.erroni=El contingut de l''arxiu no es correspon amb una exportació de tipus d''expedient tal i com s''espera
 expedient.tipus.importar.form.error.lectura=Error llegint l'arxiu a importar
 expedient.tipus.importar.form.error.importacio=Error durant la importació del contingut: {0}
 expedient.tipus.importar.validacio.codi.repetit=Tipus d''expedient ja existent: {0}
