#945: Revisió diferents errors 3.2 part de disseny
Task-Url: https://github.com/GovernIB/helium/issues/issues/945

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -168,8 +168,8 @@ expedient.info.token.activat=El token s'ha activat correctament
 expedient.info.token.desactivat=El token s'ha desactivat correctament
 
 expedient.dada.mostrar.ocultes=Mostrar ocultes
-expedient.dada.borrar.error=S'ha produït un error al interntar esborrar la dada de l'expedient
-expedient.dada.modificar.error=S'ha produït un error al interntar modificar la dada de l'expedient
+expedient.dada.borrar.error=S'ha produït un error al intentar esborrar la dada de l'expedient
+expedient.dada.modificar.error=S'ha produït un error al intentar modificar la dada de l'expedient
 expedient.nova.data.camp.variable.buit=El camp variable no pot estar buit
 
 expedient.termini.confirmar.iniciar=Estau segur que voleu iniciar aquest termini?
@@ -255,7 +255,7 @@ expedient.tipus.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aque
 
 expedient.tipus.ambInfoPropia.avis=Atenció! El tipus d''expedient no està configurat per utilitzar la informació pròpia. Modifiqueu el tipus d''expedient i marqueu la opció \"{0}\" si voleu utilitzar aquestes dades en comptes de les de la definició de procés.
 
-expedient.tipus.pipelles.titol=Configuració del tipus d'expedient
+expedient.tipus.pipelles.titol=Tipus d'expedient
 expedient.tipus.pipelles.pipella.informacio=Informació
 expedient.tipus.pipelles.pipella.estats=Estats
 expedient.tipus.pipelles.pipella.variables=Variables
@@ -438,8 +438,12 @@ expedient.tipus.camp.llistat.accio.campsRegistre=Camps
 expedient.tipus.camp.llistat.accio.nova=Nova variable
 expedient.tipus.camp.llistat.accio.modificar=Modificar
 expedient.tipus.camp.llistat.accio.esborrar=Esborrar
-expedient.tipus.camp.llistat.accio.esborrar.error=S'ha produït un error al interntar esborrar la variable del tipus d'expedient
+expedient.tipus.camp.llistat.accio.esborrar.error=S'ha produït un error al intentar esborrar la variable del tipus d'expedient
 expedient.tipus.camp.llistat.accio.esborrar.correcte=La variable s'ha esborrat correctament
+expedient.tipus.camp.llistat.accio.esborrar.validacio.tasca=La variable pertany a les tasques [{0}] i no es pot esborrar
+expedient.tipus.camp.llistat.accio.esborrar.validacio.tasca.definicions=La variable pertany a les tasques [{0}] de les defincions de procés [{1}] i no es pot esborrar
+expedient.tipus.camp.llistat.accio.esborrar.validacio.consulta=La variable pertany a les consultes [{0}] i no es pot esborrar
+expedient.tipus.camp.llistat.accio.esborrar.validacio.registre=La variable pertany als registres [{0}] i no es pot esborrar
 
 expedient.tipus.camp.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquesta variable?
 expedient.tipus.camp.llistat.agrupacio.seleccionada=Agrupació seleccionada
@@ -448,7 +452,7 @@ expedient.tipus.camp.llistat.agrupacio.boto.crear=Crear nova agrupació
 expedient.tipus.camp.llistat.agrupacio.boto.modificar=Modificar la agrupació seleccionada
 expedient.tipus.camp.llistat.agrupacio.boto.esborrar=Eliminar la agrupació seleccionada
 expedient.tipus.camp.llistat.agrupacio.boto.esborrar.confirm=Estau segur que voleu esborrar aquesta agrupació?
-expedient.tipus.camp.llistat.agrupacio.boto.esborrar.error=S'ha produït un error al interntar esborrar la agrupació
+expedient.tipus.camp.llistat.agrupacio.boto.esborrar.error=S'ha produït un error al intentar esborrar la agrupació
 expedient.tipus.camp.llistat.agrupacio.boto.esborrar.correcte=La agrupació s'ha esborrat correctament
 
 expedient.tipus.camp.llistat.agrupacio.boto.ordenar=Ordenar les agrupacions
@@ -563,14 +567,14 @@ expedient.tipus.definicioProces.llistat.columna.inicial=Inicial
 expedient.tipus.definicioProces.llistat.columna.global=Global
 expedient.tipus.definicioProces.llistat.definicioProces.dissenyar=Dissenyar
 expedient.tipus.definicioProces.llistat.definicioProces.inicial=Marcar com inicial
-expedient.tipus.definicioProces.llistat.definicioProces.inicial.error=S'ha produït un error al interntar establir la definició de procés inicial
+expedient.tipus.definicioProces.llistat.definicioProces.inicial.error=S'ha produït un error al intentar establir la definició de procés inicial
 expedient.tipus.definicioProces.llistat.definicioProces.inicial.correcte=La definició de procés s'ha marcat com a inicial correctament
 expedient.tipus.definicioProces.llistat.definicioProces.incorporar=Incorporar la informació
 expedient.tipus.definicioProces.llistat.definicioProces.incorporar.error=S'ha produït un error durant la incorporació de la informació de la definició de procés
 expedient.tipus.definicioProces.llistat.definicioProces.incorporar.correcte=La informació de la definició de procés s'ha incorporat correctament al tipus d'expedient
 expedient.tipus.definicioProces.llistat.definicioProces.esborrar=Esborrar la darrera versió
 expedient.tipus.definicioProces.llistat.definicioProces.esborrar.confirmacio=Estau segur que voleu esborrar la darrera versió d'aquesta definició de procés?
-expedient.tipus.definicioProces.llistat.definicioProces.esborrar.error=S'ha produït un error al interntar esborrar la definició de procés del tipus d'expedient
+expedient.tipus.definicioProces.llistat.definicioProces.esborrar.error=S'ha produït un error al intentar esborrar la definició de procés del tipus d'expedient
 expedient.tipus.definicioProces.llistat.definicioProces.esborrar.correcte=La definició de procés s'ha esborrat correctament
 
 expedient.tipus.definicioProces.incorporar.titol=Incorporació de la informació de la definició de procés cap al tipus d'expedient
@@ -585,14 +589,9 @@ expedient.tipus.document.llistat.columna.nom=Nom
 expedient.tipus.document.llistat.columna.plantilla=És plantilla?
 expedient.tipus.document.llistat.columna.arxiu=Arxiu
 expedient.tipus.document.llistat.accio.nova=Nou document
-#expedient.tipus.document.llistat.accio.modificar=Modificar
-expedient.tipus.document.llistat.accio.esborrar.error=S'ha produït un error al interntar esborrar el document del tipus d'expedient
+expedient.tipus.document.llistat.accio.esborrar.error=S'ha produït un error al intentar esborrar el document del tipus d'expedient
+expedient.tipus.document.llistat.accio.descarregar=Descarregar
 expedient.tipus.document.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest document?
-#expedient.tipus.document.llistat.agrupacio.seleccionada=Agrupació seleccionada
-#expedient.tipus.document.llistat.agrupacio.boto.crear=Crear nova agrupació
-#expedient.tipus.document.llistat.agrupacio.boto.modificar=Modificar la agrupació seleccionada
-#expedient.tipus.document.llistat.agrupacio.boto.esborrar=Eliminar la agrupació seleccionada
-#expedient.tipus.document.llistat.agrupacio.boto.esborrar.confirm=Estau segur que voleu esborrar aquesta agrupació?
 
 expedient.tipus.document.form.titol.nou=Crear un nou document
 expedient.tipus.document.form.titol.modificar=Modificar el document
@@ -601,16 +600,19 @@ expedient.tipus.document.form.camp.nom=Nom
 expedient.tipus.document.form.camp.descripcio=Descripcio
 expedient.tipus.document.form.camp.plantilla=És plantilla?
 expedient.tipus.document.form.camp.arxiu=Arxiu
-expedient.tipus.document.form.camp.codi_custodia=Codi per a la custòdia
-expedient.tipus.document.form.camp.tipus_doc=Tipus de document
 expedient.tipus.document.form.camp.codi_doc=Codi del document pel portasignatures
 expedient.tipus.document.form.camp.adj_auto=Adjuntar automàticament al generar
 expedient.tipus.document.form.camp.camp_data=Camp de la data
 expedient.tipus.document.form.camp.camp_data.buit=Seleccioni un camp
 expedient.tipus.document.form.camp.gen_ext=Extensió de sortida al generar
 expedient.tipus.document.form.camp.ext_perm=Extensions d'arxiu permeses
-expedient.tipus.document.form.camp.sep_comes=Separades per comes
+expedient.tipus.document.form.camp.ext_perm.comment=Separades per comes
 expedient.tipus.document.form.camp.ctype=Content type
+expedient.tipus.document.form.camp.ctype.comment=Emprat en la signatura del document
+expedient.tipus.document.form.camp.codi_custodia=Codi per a la custòdia
+expedient.tipus.document.form.camp.codi_custodia.comment=Emprat en la signatura del document
+expedient.tipus.document.form.camp.tipus_doc=Tipus de document
+expedient.tipus.document.form.camp.tipus_doc.comment=Codi del document pel portasignatures
 
 #expedient.tipus.document.validacio.codi.repetit=Aquest codi ja existeix
 expedient.tipus.document.controller.creat=El document s'ha creat correctament
@@ -626,7 +628,7 @@ expedient.tipus.accio.llistat.accio.nova=Nova acció
 expedient.tipus.accio.llistat.accio.modificar=Modificar
 expedient.tipus.accio.llistat.accio.esborrar=Esborrar
 expedient.tipus.accio.llistat.accio.esborrar.confirmacio=Estau segur que voleu esborrar aquesta acció?
-expedient.tipus.accio.llistat.accio.esborrar.error=S'ha produït un error al interntar esborrar la acció del tipus d'expedient
+expedient.tipus.accio.llistat.accio.esborrar.error=S'ha produït un error al intentar esborrar la acció del tipus d'expedient
 expedient.tipus.accio.llistat.accio.esborrar.correcte=La acció s'ha esborrat correctament
 
 expedient.tipus.accio.form.titol.nova=Crear una nova acció
@@ -678,6 +680,8 @@ expedient.tipus.enumeracio.controller.modificat=L'enumeració s'ha modificat corr
 expedient.tipus.enumeracio.controller.eliminat=L'enumeració s'ha eliminat correctament
 expedient.tipus.enumeracio.controller.eliminat.us=L'enumeració s'està utilitzant com a variable en algún camp de definició de procés i no es pot borrar.
 
+expedient.tipus.enumeracio.validacio.codi.repetit=Aquest codi ja existeix
+
 expedient.tipus.enumeracio.valors.controller.creat=El valor de l'enumeració s'ha creat correctament
 expedient.tipus.enumeracio.valors.controller.modificat=El valor de l'enumeració s'ha modificat correctament
 expedient.tipus.enumeracio.valors.controller.eliminat=El valor de l'enumeració s'ha eliminat correctament
@@ -698,6 +702,7 @@ expedient.tipus.termini.controller.creat=Termini creat correctament
 expedient.tipus.termini.controller.modificat=Termini modificat correctament
 expedient.tipus.termini.controller.eliminat=Termini esborrat correctament
 expedient.tipus.termini.controller.eliminat.no=No s'ha pogut esborrar el termini
+expedient.tipus.termini.validacio.codi.repetit=Aquest codi ja existeix
 
 expedient.tipus.domini.tipus.sql=SQL
 expedient.tipus.domini.tipus.ws=WS
@@ -736,6 +741,8 @@ expedient.tipus.domini.controller.modificat=Domini modificat correctament
 expedient.tipus.domini.controller.eliminat=Domini esborrat correctament
 expedient.tipus.domini.controller.eliminat.no=No s'ha pogut esborrar el domini
 
+expedient.tipus.domini.validacio.codi.repetit=Aquest codi ja existeix
+
 # Manteniment de redireccions del tipus d'expedient
 expedient.tipus.redireccio.llistat.columna.usuariOrigen=Usuari origen
 expedient.tipus.redireccio.llistat.columna.usuariDesti=Usuari destí
@@ -745,7 +752,7 @@ expedient.tipus.redireccio.llistat.accio.nova=Nova redirecció
 expedient.tipus.redireccio.llistat.accio.modificar=Modificar
 expedient.tipus.redireccio.llistat.accio.esborrar=Esborrar
 expedient.tipus.redireccio.llistat.accio.esborrar.confirmacio=Estau segur que voleu esborrar aquesta redirecció?
-expedient.tipus.redireccio.llistat.accio.esborrar.error=S'ha produït un error al interntar esborrar la redirecció del tipus d'expedient
+expedient.tipus.redireccio.llistat.accio.esborrar.error=S'ha produït un error al intentar esborrar la redirecció del tipus d'expedient
 expedient.tipus.redireccio.llistat.accio.esborrar.correcte=La redirecció s'ha esborrat correctament
 
 expedient.tipus.redireccio.form.titol.nova=Crear una nova redirecció
@@ -771,6 +778,7 @@ expedient.tipus.estat.controller.modificat=Estat modificat correctament
 expedient.tipus.estat.controller.eliminat=Estat esborrat correctament
 expedient.tipus.estat.controller.eliminat.no=No s''ha pogut esborrar l''estat: {0}
 expedient.tipus.estat.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest estat?
+expedient.tipus.estat.validacio.codi.repetit=Aquest codi ja existeix
 
 expedient.tipus.estat.importar.form.titol=Importar dades d'estats
 expedient.tipus.estat.importar.form.titol.modificar=Modificar estat
@@ -865,7 +873,7 @@ expedient.tipus.consulta.llistat.columna.actiu=Actiu
 expedient.tipus.consulta.llistat.accio.nova=Nova consulta
 expedient.tipus.consulta.llistat.accio.modificar=Modificar
 expedient.tipus.consulta.llistat.accio.esborrar=Esborrar
-expedient.tipus.consulta.llistat.accio.esborrar.error=S'ha produït un error al interntar esborrar la consulta del tipus d'expedient
+expedient.tipus.consulta.llistat.accio.esborrar.error=S'ha produït un error al intentar esborrar la consulta del tipus d'expedient
 expedient.tipus.consulta.llistat.accio.esborrar.correcte=La consulta s'ha esborrat correctament
 
 expedient.tipus.consulta.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquesta consulta?
@@ -929,13 +937,6 @@ expedient.tipus.consulta.params.controller.creat=El paràmetre s'ha creat correct
 expedient.tipus.consulta.params.controller.modificat=El paràmetre s'ha modificat correctament
 expedient.tipus.consulta.params.controller.eliminar.success=El paràmetre s'ha elimitat correctament
 expedient.tipus.consulta.params.controller.eliminar.error=S'ha produït un error intentant eliminar el paràmetre
-
-consulta.llistat.titol=Consultes per tipus d'expedient
-consulta.llistat.columna.codi=Codi
-consulta.llistat.columna.titol=Títol
-consulta.llistat.columna.expedientTipusNom=Tipus d'expedient
-consulta.llistat.accio.esborrar=Esborrar
-consulta.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquesta consulta? Aquesta acció no es pot tornar enrera una vegada executada.
 
 definicio.proces.delete.success=La definició de procés {0} v.{1} s'ha esborrat correctament
 definicio.proces.delete.error=Error esborrant la definició de procés : {0}
