#935: Ampliació integració Sistra executar accions
Task-Url: https://github.com/GovernIB/helium/issues/issue/935

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -134,6 +134,7 @@ expedient.info.alertes.text=Aquest expedient té alertes.
 expedient.info.alertes.complement= pendents de llegir.
 expedient.info.camp.numero=Número
 expedient.info.camp.titol=Títol
+expedient.info.camp.identificador=Identificador
 expedient.info.camp.tipus=Tipus
 expedient.info.camp.data.inici=Iniciat el
 expedient.info.camp.data.fi=Finalitzat el
@@ -805,8 +806,22 @@ expedient.tipus.integracio.tramits.mapeig.documents=Mapeig de documents
 expedient.tipus.integracio.tramits.mapeig.adjunts=Mapeig de documents com adjunts
 expedient.tipus.integracio.tramits.variables=Variables
 expedient.tipus.integracio.tramits.documents=Documents
-expedient.tipus.integracio.tramits.adjunts=Adunts
+expedient.tipus.integracio.tramits.adjunts=Adjunts
 expedient.tipus.integracio.tramits.tramitCodi=Identificador del tràmit
+expedient.tipus.integracio.tramits.tipus=Tipus d'operació
+expedient.tipus.integracio.tramits.tipus.INICIAR_EXPEDIENT=Iniciar expedient
+expedient.tipus.integracio.tramits.tipus.EXECUTAR_ACCIO=Executar acció
+expedient.tipus.integracio.tramits.accio.placeholder=Trii l'acció a executar
+expedient.tipus.integracio.tramits.accio=Acció
+expedient.tipus.integracio.tramits.codiVarIdentificadorExpedient= Codi var. ID expedient
+expedient.tipus.integracio.tramits.tipus.operacio=Tipus operació
+expedient.tipus.integracio.tramits.creat=El tràmit s'ha creat correctament
+expedient.tipus.integracio.tramits.modificat=El tràmit s'ha modificat correctament
+expedient.tipus.integracio.tramits.eliminat=El tràmit s'ha eliminat correctament
+expedient.tipus.integracio.tramits.titol.nou=Nou tràmit
+expedient.tipus.integracio.tramits.titol.modificar=Modificar tràmit
+expedient.tipus.integracio.tramits.titol.accio=Acció a executar
+expedient.tipus.integracio.tramits.confirmacio.esborrar=Estau segur que voleu esborrar aquest tràmit?
 
 expedient.tipus.integracio.notificacio.organCodi=Codi d'òrgan
 expedient.tipus.integracio.notificacio.oficinaCodi=Codi d'oficina
