#935: Ampliació integració Sistra executar accions
Task-Url: https://github.com/GovernIB/helium/issues/issue/935

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -638,7 +638,7 @@ expedient.tipus.accio.form.accio.codi=Codi
 expedient.tipus.accio.form.accio.nom=Nom
 expedient.tipus.accio.form.accio.defprocJbpmKey=Definició de procés
 expedient.tipus.accio.form.accio.defprocJbpmKey.placeholder=Seleccioni la definició de procés que conté el handler
-expedient.tipus.accio.form.accio.jbpmAction=Handler
+expedient.tipus.accio.form.accio.jbpmAction=Acció Jbpm
 expedient.tipus.accio.form.accio.descripcio=Descripció
 expedient.tipus.accio.form.accio.publica=Pública
 expedient.tipus.accio.form.accio.oculta=Oculta
