#963: Error seleccionant tasques per reassignat massiu
Task-Url: https://github.com/GovernIB/helium/issues/963

Adaptació solució branca 3.2

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -102,6 +102,8 @@ expedient.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest exp
 expedient.llistat.tasques.pendents.mostrar=Mostrar tasques pendents
 expedient.llistat.tasques.pendents.ocultar=Ocultar tasques pendents
 expedient.llistat.tasques.pendents.nohiha=Aquest expedient no te cap tasca pendent per a l'usuari actual
+expedient.llistat.accio.reassignar.expedient.tipus.buit=No s'ha seleccionat cap tipus d'expedient per a poder reassignar
+expedient.llistat.accio.reassignar.sense.permis=No es té permís de reassignació pel tipus d'expedient seleccionat
 
 expedient.llistat.consulta_avanzada=Consulta avançada
 
