#967: Manteniment d'enumeracions a nivell d'entorn
Task-Url: https://github.com/GovernIB/helium/issues/967

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -19,6 +19,7 @@ error.tipus.basic=Errors Bàsics
 error.tipus.integracions=Errors d'Integracions
 error.tipus.basic.no=Sense errors bàsics
 error.tipus.integracions.no=Sense errors d'integracions
+error.permis.disseny.entorn=No disposa de permisos per dissenyar l'entorn
 
 entorn.llistat.titol=Entorns
 entorn.llistat.columna.codi=Codi
@@ -651,6 +652,9 @@ expedient.tipus.accio.controller.modificat=La acció s'ha modificat correctament
 expedient.tipus.accio.controller.eliminat=La acció s'ha elimitat correctament
 expedient.tipus.accio.validacio = Errors de validació
 
+## MANTENIMENT D'ENUMERACIONS ##
+enumeracio.llistat.titol=Enumeracions
+
 ## MANTENIMENT DE ENUMERACIONS A TIPUS DE EXPEDIENT ##
 expedient.tipus.enumeracio.llistat.accio.nova=Nova enumeració
 expedient.tipus.enumeracio.llistat.columna.codi=Codi
@@ -678,6 +682,7 @@ expedient.tipus.enumeracio.valors.form.camp.codi=Codi
 expedient.tipus.enumeracio.valors.form.camp.nom=Nom
 
 expedient.tipus.enumeracio.controller.creat=L'enumeració s'ha creat correctament
+expedient.tipus.enumeracio.controller.creat.error=Error creant la enumeració: {0}
 expedient.tipus.enumeracio.controller.modificat=L'enumeració s'ha modificat correctament
 expedient.tipus.enumeracio.controller.eliminat=L'enumeració s'ha eliminat correctament
 expedient.tipus.enumeracio.controller.eliminat.us=L'enumeració s'està utilitzant com a variable en algún camp de definició de procés i no es pot borrar.
