#973: Probema amb la passarel·la de firmes
Task-Url: https://github.com/GovernIB/helium/issues/issues/973

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -20,6 +20,7 @@ error.tipus.integracions=Errors d'Integracions
 error.tipus.basic.no=Sense errors bàsics
 error.tipus.integracions.no=Sense errors d'integracions
 error.permis.disseny.entorn=No disposa de permisos per dissenyar l'entorn
+error.signatura=Error durant la signatura: {0}
 
 entorn.llistat.titol=Entorns
 entorn.llistat.columna.codi=Codi
@@ -1353,6 +1354,7 @@ passarelafirma.form.conversio.boto.previsualitzar=Previsualitzar
 passarelafirma.form.camp.motiu=Motiu
 passarelafirma.form.camp.lloc=Lloc de la firma
 passarelafirma.form.iniciar=Iniciar procés de firma
+passarelafirma.controller.error.filtres=No existeix cap mòdul de firma que passi els filtres
 document.controller.firma.passarela.final.cancel=La firma del document ha estat cancel·lada
 document.controller.firma.passarela.final.ok=La firma del document ha finalitzat correctament
 document.controller.firma.passarela.final.ok.nofile=La firma del document ha finalitzat correctament però no ha retornat cap document
