--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -19,6 +19,7 @@ error.tipus.basic=Errors Bàsics
 error.tipus.integracions=Errors d'Integracions
 error.tipus.basic.no=Sense errors bàsics
 error.tipus.integracions.no=Sense errors d'integracions
+error.signatura=Error durant la signatura: {0}
 
 alerta.llistat.marcar_com_llegida=Marcar llegida
 alerta.llistat.marcar_no_llegida=Desmarcar llegida
@@ -523,6 +524,7 @@ passarelafirma.form.conversio.boto.previsualitzar=Previsualitzar
 passarelafirma.form.camp.motiu=Motiu
 passarelafirma.form.camp.lloc=Lloc de la firma
 passarelafirma.form.iniciar=Iniciar procés de firma
+passarelafirma.controller.error.filtres=No existeix cap mòdul de firma que passi els filtres
 document.controller.firma.passarela.final.cancel=La firma del document ha estat cancel·lada
 document.controller.firma.passarela.final.ok=La firma del document ha finalitzat correctament
 document.controller.firma.passarela.final.ok.nofile=La firma del document ha finalitzat correctament però no ha retornat cap document
