#972: Manteniment de dominis a nivell d'entorn
Task-Url: https://github.com/GovernIB/helium/issues/issues/972

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -686,7 +686,7 @@ expedient.tipus.enumeracio.controller.creat=L'enumeració s'ha creat correctament
 expedient.tipus.enumeracio.controller.creat.error=Error creant la enumeració: {0}
 expedient.tipus.enumeracio.controller.modificat=L'enumeració s'ha modificat correctament
 expedient.tipus.enumeracio.controller.eliminat=L'enumeració s'ha eliminat correctament
-expedient.tipus.enumeracio.controller.eliminat.us=L'enumeració s'està utilitzant com a variable en algún camp de definició de procés i no es pot borrar.
+expedient.tipus.enumeracio.controller.eliminat.us=L'enumeració s'està utilitzant com a variable en algún camp i no es pot esborrar.
 
 expedient.tipus.enumeracio.validacio.codi.repetit=Aquest codi ja existeix
 
@@ -711,6 +711,13 @@ expedient.tipus.termini.controller.modificat=Termini modificat correctament
 expedient.tipus.termini.controller.eliminat=Termini esborrat correctament
 expedient.tipus.termini.controller.eliminat.no=No s'ha pogut esborrar el termini
 expedient.tipus.termini.validacio.codi.repetit=Aquest codi ja existeix
+
+domini.llistat.titol=Dominis
+domini.llistat.accio=XXX
+domini.llistat.accio.nou=Nou domini
+domini.llistat.columna.codi=Codi
+domini.llistat.columna.titol=Títol
+domini.llistat.confirm.esborra=Estau segur que voleu esborrar aquest domini?
 
 expedient.tipus.domini.tipus.sql=SQL
 expedient.tipus.domini.tipus.ws=WS
@@ -748,6 +755,7 @@ expedient.tipus.domini.controller.creat=Domini creat correctament
 expedient.tipus.domini.controller.modificat=Domini modificat correctament
 expedient.tipus.domini.controller.eliminat=Domini esborrat correctament
 expedient.tipus.domini.controller.eliminat.no=No s'ha pogut esborrar el domini
+expedient.tipus.domini.controller.eliminat.us=El domini s'està utilitzant com a variable en algún camp i no es pot eborrar.
 
 expedient.tipus.domini.validacio.codi.repetit=Aquest codi ja existeix
 
